graph/formats/rdf/extract.rl
// Go code generated by go generate gonum.org/v1/gonum/graph/formats/rdf; DO NOT EDIT.

// Copyright ©2020 The Gonum Authors. All rights reserved.
// Use of this source code is governed by a BSD-style
// license that can be found in the LICENSE file.

package rdf

import (
	"fmt"
	"unicode"
)

%%{
	machine extract;

	include extract "extract_actions.rl";

	include nquads "nquads.rl";

	value := (
	           IRIREF
	         | '_:' BLANK_NODE_LABEL >StartBlank %EndBlank
	         | '"' STRING_LITERAL >StartLiteral %EndLiteral '"' ( '^^' IRIREF | LANGTAG >StartLang %EndLang )?
	         ) %Return @!Error ;

	write data;
}%%

func extract(data []rune) (text, qual string, kind Kind, err error) {
	var (
		cs, p int
		pe    = len(data)
		eof   = pe

		iri     = -1
		blank   = -1
		literal = -1
		lang    = -1

		iriText     string
		blankText   string
		literalText string
		langText    string
	)

	%%write init;

	%%write exec;

	return "", "", 0, ErrInvalidTerm
}
